# CaptureGuard

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  release.md
gui/: Cargo.toml  build.rs
gui/src/: i18n.rs  inject.rs  main.rs  proc.rs  selfprotect.rs
protect-dll/: Cargo.toml
protect-dll/src/: lib.rs
