[package]
name = "gui"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows GUI for CaptureGuard."
publish = false
default-run = "capture-guard"

[[bin]]
name = "capture-guard"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
obfstr = "0.4"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
